apps/hello-world/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    # For PR previews, the host will be pr-{number}-podinfo.localhost
    # For regular staging, it will be podinfo.localhost
spec:
  rules:
    - host: podinfo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
